# Contacpp

./: CMakeLists.txt  Contacpp.sln  Contacpp.vcxproj  Contacpp.vcxproj.filters  README.md  app_gui.cpp  contacts.db  db.h  imgui.ini  main.cpp
include/: app_gui.h  gui.h
src/: db.cpp  gui.cpp  gui_main.cpp
